src/objects/Opportunity_LDC__c.object
<CustomObject>
    <description>Junction Object between Opportunity and LDC</description>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunity LDCs</relationshipLabel>
        <relationshipName>Opportunity_LDCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Opportunity LDCs</relationshipLabel>
        <relationshipName>LDCOPPS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LDC_Annual_Usage__c</fullName>
        <description>The Annual Usage Recorded of the related LDC Account.</description>
        <inlineHelpText>The Annual Usage Recorded of the related LDC Account.</inlineHelpText>
        <label>LDC Annual Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity LDCs</relationshipLabel>
        <relationshipName>OpportunityLDCs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Opportunity LDC</label>
    <nameField>
        <displayFormat>OL-{0000000}</displayFormat>
        <label>Opportunity LDC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity LDCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>